--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %}
+{% extends "start.html" %}
 {% block title %}Home Page{% endblock %}
 {% block content %}
 <h1></h1>
 {% endblock %}
+
