Finished linking Start page, why page, About us page, Login page and Sign up page

--- a/templates/start.html
+++ b/templates/start.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#">PARATUS</a>
+		  <a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -14,41 +14,30 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Link</a>
+		      <li class="nav-item active">
+				<a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
 		      </li>
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Dropdown
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">Action</a>
-		          <a class="dropdown-item" href="#">Another action</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="#">Something else here</a>
-		        </div>
+		      <li class="nav-item active">
+				<a class="nav-link" href="{{ url_for('aboutus')}}">About Us <span class="sr-only">(current)</span></a>
 		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+		      <li class="nav-item active">
+				<a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
 		      </li>
 		    </ul>
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		    </form>
 		  </div>
 		</nav>
 		<div class="mx-auto" style="width: 200px;">
 		<h1>WELCOME</h1>
 		</div>
 		<div class="mx-auto" style="width: 340px;">
-		<button class="btn btn-primary btn-lg" type="button">Log In</button>
-		<a href="{{ url_for('signup') }}">Home</a>
-		<button class="btn btn-primary btn-lg" type="button" onclick="{{ url_for('signup')}}">Sign Up</button>
+		<button class="btn btn-outline-secondary btn-lg"><a href="{{ url_for('login')}}">Login</a></button>
+		<button class="btn btn-outline-secondary btn-lg"><a href="{{ url_for('signup')}}">Sign Up</a></button>
+
 		<button class="btn btn-info btn-lg" type="info">About Us</button>
 		</div>
+
 		{% block content %}
 		{% endblock %}
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
