--- a/templates/why.html
+++ b/templates/why.html
@@ -12,7 +12,7 @@
 		  </button>
 
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
+		    <ul class="navbar-nav text-right ml-auto">
 		      <li class="nav-item active">
 		        <a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
 		      </li>
@@ -28,7 +28,7 @@
 		    </ul>
 		  </div>
 		</nav>
-		<div class="mx-auto" style="width: 200px;">
+		<div class="mx-auto" style="width: 300px;">
 		<h1>Why Paratus</h1>
 		</div>
 		<div class="mx-auto" style="width: 340px;">
