--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,45 +6,73 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav text-right ml-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Link</a>
-		      </li>
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Dropdown
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="#">Action</a>
-		          <a class="dropdown-item" href="#">Another action</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="#">Something else here</a>
-		        </div>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-		      </li>
-		    </ul>
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		    </form>
-		  </div>
-		</nav>
+			<a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+  
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav text-right ml-auto">
+				<li class="nav-item active">
+				  <a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+				  <a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+				  <a class="nav-link" href="{{ url_for('aboutus')}}">About Us <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+				  <a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
+				</li>
+			  </ul>
+			</div>
+		  </nav>
 		<div class="mx-auto" style="width: 200px;">
 		<h1>Sign Up</h1>
 		</div>
-		<div class="mx-auto" style="width: 450px;">
-		<button class="btn btn-info btn-lg" type="info">About Us</button>
+		<div class="mx-auto" style="width: 300px;">
+			<form>
+				<div class="form-outline mb-4">
+					<input type="text" id="firstname" class="form-control" />
+					<label class="form-label" for="form2Example2">First Name</label>
+				</div>
+
+				<div class="form-outline mb-4">
+					<input type="text" id="lastname" class="form-control" />
+					<label class="form-label" for="form2Example2">Last Name</label>
+				</div>
+				
+				<div class="form-outline mb-4">
+					<input type="text" id="emial" class="form-control" />
+					<label class="form-label" for="form2Example2">Email</label>
+				</div>
+
+				<div class="form-outline mb-4">
+					<input type="text" id="socialsecurity" class="form-control" />
+					<label class="form-label" for="form2Example2">Social Security</label>
+				</div>
+			  
+				<div class="form-outline mb-4">
+				  <input type="text" id="dateOfBirth" class="form-control" />
+				  <label class="form-label" for="form2Example2">Date of Birth</label>
+				</div>
+			    
+				<div class="form-outline mb-4">
+					<input type="text" id="accountNumber" class="form-control" />
+					<label class="form-label" for="form2Example1">Address</label>
+				</div>
+				<div class="form-outline mb-4">
+				<p>What is your gender?</p>
+					<input type="radio" name="gender" value="male"> Male
+					<input type="radio" name="gender" value="female"> Female		
+				</div>
+
+				<button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+				<div class="text-center">
+				  <p>Already a member? <a href="{{ url_for('login')}}">Login</a></p>
+				</div>
+			  </form>
 		</div>
 		{% block content %}
 		{% endblock %}
