--- a/templates/login.html
+++ b/templates/login.html
@@ -34,12 +34,12 @@
 		<div class="mx-auto" style="width: 300px;">
 			<form>
 				<div class="form-outline mb-4">
-				  <input type="email" id="form2Example1" class="form-control" />
+				  <input type="text" id="form2Example1" class="form-control" />
 				  <label class="form-label" for="form2Example1">Account number</label>
 				</div>
 			  
 				<div class="form-outline mb-4">
-				  <input type="password" id="form2Example2" class="form-control" />
+				  <input type="text" id="form2Example2" class="form-control" />
 				  <label class="form-label" for="form2Example2">Date of Birth</label>
 				</div>
 			  
@@ -55,7 +55,8 @@
 					<a href="#!">Find Account Number</a>
 				  </div>
 				</div>
-					<button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+
+				<button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
 				<div class="text-center">
 				  <p>Not a member? <a href="{{ url_for('signup')}}">Sign Up</a></p>
 				</div>
