--- a/templates/myFilesLogin.html
+++ b/templates/myFilesLogin.html
@@ -28,16 +28,48 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('Account')}}">Account <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
     </nav>
+    <div class="mx-auto" style="width: 200px;">
+        <h1>Log In</h1>
+    </div>
+    <div class="mx-auto" style="width: 300px;">
+        <form>
+            <div class="form-outline mb-4">
+                <input type="email" id="form2Example1" class="form-control" />
+                <label class="form-label" for="form2Example1">Account number</label>
+            </div>
+
+            <div class="form-outline mb-4">
+                <input type="password" id="form2Example2" class="form-control" />
+                <label class="form-label" for="form2Example2">Date of Birth</label>
+            </div>
+
+            <div class="row mb-4">
+                <div class="col d-flex justify-content-center">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                        <label class="form-check-label" for="form2Example31"> Remember me </label>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <a href="#!">Find Account Number</a>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+            <div class="text-center">
+                <p>Not a member? <a href="{{ url_for('signup')}}">Sign Up</a></p>
+            </div>
+        </form>
+    </div>
 
 
-
-
+    {% block content %}
+    {% endblock %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
