--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -29,6 +29,9 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('Files')}}">Files <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('Account')}}">Account <span
                             class="sr-only">(current)</span></a>
                 </li>
