--- a/templates/login.html
+++ b/templates/login.html
@@ -1,74 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<title>{% block title %}{% endblock %}</title>
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-  
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav text-right ml-auto">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<title>Login}</title>
+</head>
+
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav text-right ml-auto">
 				<li class="nav-item active">
-				  <a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-				  <a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-				  <a class="nav-link" href="{{ url_for('aboutus')}}">About Us <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{{ url_for('aboutus')}}">About Us <span
+							class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-				  <a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
 				</li>
-			  </ul>
-			</div>
-		  </nav>
-		<div class="mx-auto" style="width: 200px;">
-			<h1>Log In</h1>
+			</ul>
 		</div>
-		<div class="mx-auto" style="width: 300px;">
-			<form>
-				<div class="form-outline mb-4">
-				  <input type="text" id="form2Example1" class="form-control" />
-				  <label class="form-label" for="form2Example1">Account number</label>
-				</div>
-			  
-				<div class="form-outline mb-4">
-				  <input type="text" id="form2Example2" class="form-control" />
-				  <label class="form-label" for="form2Example2">Date of Birth</label>
-				</div>
-			  
-				<div class="row mb-4">
-				  <div class="col d-flex justify-content-center">
+	</nav>
+	<div class="mx-auto" style="width: 200px;">
+		<h1>Log In</h1>
+	</div>
+	<div class="mx-auto" style="width: 300px;">
+		<form>
+			<div class="form-outline mb-4">
+				<input type="text" id="form2Example1" class="form-control" />
+				<label class="form-label" for="form2Example1">Account number</label>
+			</div>
+
+			<div class="form-outline mb-4">
+				<input type="text" id="form2Example2" class="form-control" />
+				<label class="form-label" for="form2Example2">Date of Birth</label>
+			</div>
+
+			<div class="row mb-4">
+				<div class="col d-flex justify-content-center">
 					<div class="form-check">
-					  <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-					  <label class="form-check-label" for="form2Example31"> Remember me </label>
+						<input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+						<label class="form-check-label" for="form2Example31"> Remember me </label>
 					</div>
-				  </div>
-			  
-				  <div class="col">
-					<a href="#!">Find Account Number</a>
-				  </div>
 				</div>
 
-				<button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
-				<div class="text-center">
-				  <p>Not a member? <a href="{{ url_for('signup')}}">Sign Up</a></p>
+				<div class="col">
+					<a href="#!">Find Account Number</a>
 				</div>
-			  </form>
-		</div>
-		
-		
-		{% block content %}
-		{% endblock %}
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	</body>
-	
+			</div>
+
+			<button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+			<div class="text-center">
+				<p>Not a member? <a href="{{ url_for('signup')}}">Sign Up</a></p>
+			</div>
+		</form>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+		crossorigin="anonymous"></script>
+</body>
+
 </html>
