CAP-11 Added Title

--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -37,7 +37,13 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav> <br>
+
+
+    <h2 class="entry-title" style="text-align: center; width: 100%;" itemprop="headline"><a rel="bookmark">File
+            Manager</a></h2><br>
+
+    </h2>
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <div class="container">
