CAP-20 Fixed Linking issues. Links created between files and account

--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -29,11 +29,10 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('Files')}}">Files <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="myFiles.html">Files <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('Account')}}">Account <span
-                            class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="accountPage.html">Account <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
