--- a/templates/accountPage.html
+++ b/templates/accountPage.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="CSS/account.css" rel="stylesheet" />
-    <title>My Files</title>
+    <title>My Account</title>
 </head>
 
 <body>
@@ -29,7 +29,10 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="myFiles.html">Files <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="accountPage.html">Account <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
