CAP-20 Added edit page

--- a/templates/accountPageEdit.html
+++ b/templates/accountPageEdit.html
@@ -57,62 +57,57 @@
                     </div>
 
                 </div>
-                <div class="col-md-8">
-                    <div class="card mb-3">
+
+                <div class="col-lg-8">
+                    <div class="card">
                         <div class="card-body">
-                            <div class="row">
+                            <div class="row mb-3">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Full Name</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Name
+                                    <input type="text" class="form-control" value="name">
                                 </div>
                             </div>
-                            <hr>
-                            <div class="row">
+                            <div class="row mb-3">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Email</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    email
+                                    <input type="text" class="form-control" value="email">
                                 </div>
                             </div>
-                            <hr>
-                            <div class="row">
+                            <div class="row mb-3">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Phone</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Phone
+                                    <input type="text" class="form-control" value="Phone">
                                 </div>
                             </div>
-                            <hr>
-                            <div class="row">
+
+                            <div class="row mb-3">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Address</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Address
+                                    <input type="text" class="form-control" value="Address">
                                 </div>
                             </div>
-                            <hr>
                             <div class="row">
-                                <div class="col-sm-12">
-                                    <a class="btn btn-info " target="__blank" href="accountPageEdit.html">Edit</a>
+                                <div class="col-sm-3"></div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="button" class="btn btn-primary px-4" value="Save Changes">
                                 </div>
                             </div>
                         </div>
                     </div>
 
 
-
-
                 </div>
             </div>
-
         </div>
     </div>
-
 </body>
 
 </html>
