--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -54,10 +54,9 @@
                             <h5>Show:</h5>
                             <a href="#" class="file-control active">All</a>
                             <a href="#" class="file-control">Documents</a>
-                            <a href="#" class="file-control">Audio</a>
                             <a href="#" class="file-control">Images</a>
                             <div class="hr-line-dashed"></div>
-                            <button class="btn btn-primary btn-block">Upload Files</button>
+                            <a href="upload.html"><button class="btn btn-primary btn-block">Upload Files</button></a>
                             <div class="hr-line-dashed"></div>
                             <h5>Folders</h5>
                             <ul class="folder-list" style="padding: 0">
