--- a/templates/start.html
+++ b/templates/start.html
@@ -8,10 +8,33 @@
 </head>
 
 <body>
-	<nav class=class="header" id="myHeader">
-		<h2>My Header</h2>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav text-right ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ url_for('aboutus')}}">About Us <span
+							class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="myFiles.html">Files <span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+		</div>
 	</nav>
 	<div class="mx-auto" style="width: 200px;">
 		<h1>WELCOME</h1>
