--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,7 +49,7 @@
 
 
             <li>
-                <a href="#">
+                <a href="accountPage.html">
                     <i class='bx bx-cog'></i>
                     <span class="links_name">Settings</span>
                 </a>
