--- a/templates/upload.html
+++ b/templates/upload.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav text-right ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="dashboard.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
