--- a/templates/accountPage.html
+++ b/templates/accountPage.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="CSS/account.css" rel="stylesheet" />
+    <link href="{{ url_for('static',filename='CSS/account.css')}}" rel="stylesheet" />
     <title>My Account</title>
 </head>
 
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav text-right ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="dashboard.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('dashboard')}}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
@@ -29,15 +29,15 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="myFiles.html">Files <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('myFiles')}}">Files <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="accountPage.html">Account <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('accountPage')}}">Account <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
     </nav> <br> <br>
-
+    {%block content %}
     <div class="container">
         <div class="main-body">
             <div class="row gutters-sm">
@@ -45,9 +45,9 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="d-flex flex-column align-items-center text-center">
-                                <img src="images/blank-profile-picture.png" class="rounded-circle" width="150">
+                                <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" class="rounded-circle" width="150">
                                 <div class="mt-3">
-                                    <h4>(Users Name)</h4>
+                                    <h4>{{accountinfo[0]}}</h4>
                                     <p class="text-secondary mb-1">(OCCUPATION)</p>
 
 
@@ -62,10 +62,10 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Full Name</h6>
+                                    <h6 class="mb-0">Name</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Name
+                                    {{accountinfo[0]}}
                                 </div>
                             </div>
                             <hr>
@@ -74,7 +74,7 @@
                                     <h6 class="mb-0">Email</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    email
+                                    {{accountinfo[1]}}
                                 </div>
                             </div>
                             <hr>
@@ -83,7 +83,7 @@
                                     <h6 class="mb-0">Phone</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Phone
+                                    {{accountinfo[2]}}
                                 </div>
                             </div>
                             <hr>
@@ -92,13 +92,13 @@
                                     <h6 class="mb-0">Address</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    Address
+                                    {{accountinfo[3]}}
                                 </div>
                             </div>
                             <hr>
                             <div class="row">
                                 <div class="col-sm-12">
-                                    <a class="btn btn-info " target="__blank" href="accountPageEdit.html">Edit</a>
+                                    <a class="btn btn-info " target="__blank" href="{{ url_for('accountPageEdit')}}">Edit</a>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
 
         </div>
     </div>
-
+    {% endblock %}
 </body>
 
 </html>
