--- a/templates/start.html
+++ b/templates/start.html
@@ -18,7 +18,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav text-right ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="{{ url_for('start')}}">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{{ url_for('start')}} "class="active">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
@@ -30,9 +30,7 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="{{ url_for('login')}}">Login <span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="myFiles.html">Files <span class="sr-only">(current)</span></a>
-				</li>
+
 			</ul>
 		</div>
 	</nav>
