--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,8 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="CSS/upload.css" rel="stylesheet" />
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" >
+    <link href="{{ url_for('static',filename='CSS/upload.css')}}" rel="stylesheet" />
     <title>Uploads</title>
 </head>
 
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav text-right ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="dashboard.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('dashboard')}}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
@@ -42,20 +42,20 @@
 
     <div class="row">
         <div class="col-lg-5 mx-auto">
-            <div class="p-5 bg-white shadow rounded-lg"><img src="images/Upload.png" alt="" width="200"
+            <div class="p-5 bg-white shadow rounded-lg"><img src="{{ url_for('static',filename='images/Upload.png')}}" alt="" width="200"
                     class="d-block mx-auto mb-4 rounded-pill">
 
                 <h6 class="text-center mb-4 text-muted">
                     Upload your files
                 </h6>
-
+                <form action = "{{ url_for('upload')}}" method = "post" enctype="multipart/form-data">
                 <div class="custom-file overflow-hidden rounded-pill mb-5">
-                    <input id="customFile" type="file" class="custom-file-input rounded-pill">
+                    <input id="file" name = "file" type="file" class="custom-file-input rounded-pill">
                     <label for="customFile" class="custom-file-label rounded-pill">Choose file</label>
                 </div>
 
-                <a href="myFiles.html"> <button class="btn btn-primary btn-block">Done</button> </a>
-
+                <input type ="submit" value = "Done" class="btn btn-primary btn-block"> </a>
+                </form>
             </div>
         </div>
     </div>
