--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,7 +29,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="calendar.html">
                     <i class='bx bx-calendar'></i>
                     <span class="links_name">Calendar</span>
                 </a>
