--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,18 +35,17 @@
                 </a>
             </li>
             <li>
-                <a href="emails.html">
+                <a href="{{ url_for('scheduling')}}">
                     <i class='bx bx-envelope'></i>
-                    <span class="links_name">Emails</span>
+                    <span class="links_name">Scheduling</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="{{ url_for('report')}}">
                     <i class='bx bx-chart'></i>
                     <span class="links_name">Reports</span>
                 </a>
             </li>
-
 
             <li>
                 <a href="{{ url_for('accountPage')}}">
