--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet"  href="{{url_for('static',filename='CSS/calendar.css')}}">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href= "{{ url_for('static',filename='CSS/files.css')}}" rel="stylesheet" />
@@ -9,42 +13,81 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav text-right ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('dashboard')}}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('aboutus')}}">About Us <span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('myFiles')}}">Files <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('accountPage')}}">Account <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+    <div class="sidebar">
+        <div class="logo-details">
+            <i class='bx bx-home-circle'></i>
+            <span class="logo_name">Paratus</span>
         </div>
-    </nav> <br>
+        <ul class="nav-links">
+            <li>
+                <a href="{{ url_for('dashboard')}}" class="active">
+                    <i class='bx bx-grid-alt'></i>
+                    <span class="links_name">Dashboard</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('myFiles')}}">
+                    <i class='bx bx-file'></i>
+                    <span class="links_name">Files</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('calendar')}}">
+                    <i class='bx bx-calendar'></i>
+                    <span class="links_name">Calendar</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('scheduling')}}">
+                    <i class='bx bx-envelope'></i>
+                    <span class="links_name">Scheduling</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('report')}}">
+                    <i class='bx bx-chart'></i>
+                    <span class="links_name">Reports</span>
+                </a>
+            </li>
 
+            <li>
+                <a href="{{ url_for('accountPage')}}">
+                    <i class='bx bx-cog'></i>
+                    <span class="links_name">Settings</span>
+                </a>
+            </li>
+            <li class="log_out">
+                <a href="{{ url_for('logout')}}">
+                    <i class='bx bx-log-out'></i>
+                    <span class="links_name">Log out</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 
-    <h2 class="entry-title" style="text-align: center; width: 100%;" itemprop="headline"><a rel="bookmark">File
+    <section class="home-section">
+        <nav>
+            <div class="sidebar-button">
+                <i class='bx bx-menu sidebarBtn'></i>
+                <span class="dashboard">Dashboard</span>
+            </div>
+
+            <div class="logo-box">
+                <img src="{{ url_for('static',filename='images/paratuslogoicon.png')}}" alt="">
+            </div>
+
+            <div class="profile-details">
+                <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" alt="">
+                <span class="admin_name">name[0]</span>
+
+            </div>
+        </nav>
+        <h2 class="entry-title" style="text-align: center; width: 100%;" itemprop="headline"><a rel="bookmark">File
             Manager</a></h2><br>
 
-    </h2>
+        </h2>
 
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -77,6 +120,11 @@
             <div class="col-md-9 animated fadeInRight">
                 {{fileinfo | safe}}
             </div>
+    </section>
+
+    
+
+    
 
 </body>
 
