--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -20,13 +20,13 @@
         </div>
         <ul class="nav-links">
             <li>
-                <a href="{{ url_for('dashboard')}}" class="active">
+                <a href="{{ url_for('dashboard')}}">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Dashboard</span>
                 </a>
             </li>
             <li>
-                <a href="{{ url_for('myFiles')}}">
+                <a href="{{ url_for('myFiles')}}" class="active">
                     <i class='bx bx-file'></i>
                     <span class="links_name">Files</span>
                 </a>
