--- a/templates/report.html
+++ b/templates/report.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li>
-                <a href="{{ url_for('dashboard')}}" class="active">
+                <a href="{{ url_for('dashboard')}}">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Dashboard</span>
                 </a>
@@ -40,7 +40,7 @@
                 </a>
             </li>
             <li>
-                <a href="{{ url_for('report')}}">
+                <a href="{{ url_for('report')}}" class="active">
                     <i class='bx bx-chart'></i>
                     <span class="links_name">Reports</span>
                 </a>
