--- a/templates/scheduling.html
+++ b/templates/scheduling.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li>
-                <a href="{{ url_for('dashboard')}}" class="active">
+                <a href="{{ url_for('dashboard')}}">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Dashboard</span>
                 </a>
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li>
-                <a href="{{ url_for('scheduling')}}">
+                <a href="{{ url_for('scheduling')}}" class="active">
                     <i class='bx bx-envelope'></i>
                     <span class="links_name">Scheduling</span>
                 </a>
