--- a/templates/accountPage.html
+++ b/templates/accountPage.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="nav-links">
             <li>
-                <a href="{{ url_for('dashboard')}}" class="active">
+                <a href="{{ url_for('dashboard')}}">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Dashboard</span>
                 </a>
@@ -51,7 +51,7 @@
             </li>
 
             <li>
-                <a href="{{ url_for('accountPage')}}">
+                <a href="{{ url_for('accountPage')}}" class="active">
                     <i class='bx bx-cog'></i>
                     <span class="links_name">Settings</span>
                 </a>
