--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li>
-                <a href="{{ url_for('dashboard')}}" class="active">
+                <a href="{{ url_for('dashboard')}}">
                     <i class='bx bx-grid-alt'></i>
                     <span class="links_name">Dashboard</span>
                 </a>
@@ -28,7 +28,7 @@
                 </a>
             </li>
             <li>
-                <a href="{{ url_for('calendar')}}">
+                <a href="{{ url_for('calendar')}}" class="active">
                     <i class='bx bx-calendar'></i>
                     <span class="links_name">Calendar</span>
                 </a>
