--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -78,7 +78,7 @@
 
             <div class="profile-details">
                 <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" alt="">
-                <span class="admin_name">name[0]</span>
+                <span class="admin_name">{{username}}</span>
 
             </div>
         </nav>
