--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -74,7 +74,7 @@
 
             <div class="profile-details">
                 <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" alt="">
-                <span class="admin_name">name[0]</span>
+                <span class="admin_name">{{info[0]}}</span>
 
             </div>
         </nav>
