--- a/static/CSS/dashboard.css
+++ b/static/CSS/dashboard.css
@@ -11,7 +11,7 @@
     position: fixed;
     height: 100%;
     width: 240px;
-    background: #0A2558;
+    background: #4f4f4f;
     transition: all 0.5s ease;
 }
 
@@ -59,11 +59,11 @@
 }
 
 .sidebar .nav-links li a.active {
-    background: #081D45;
+    background: #3f3f3f;
 }
 
 .sidebar .nav-links li a:hover {
-    background: #081D45;
+    background: #3f3f3f;
 }
 
 .sidebar .nav-links li i {
