--- a/templates/accountPage.html
+++ b/templates/accountPage.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"  href="{{url_for('static',filename='CSS/calendar.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='CSS/account.css')}}">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="{{ url_for('static',filename='CSS/account.css')}}" rel="stylesheet" />
+
     <title>My Account</title>
 </head>
 
@@ -69,7 +69,7 @@
         <nav>
             <div class="sidebar-button">
                 <i class='bx bx-menu sidebarBtn'></i>
-                <span class="dashboard">Dashboard</span>
+                <span class="dashboard">Settings</span>
             </div>
 
             <div class="logo-box">
@@ -82,85 +82,87 @@
 
             </div>
         </nav>
-        
+
         {%block content %}
-    <div class="container">
-        <div class="main-body">
-            <div class="row gutters-sm">
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="d-flex flex-column align-items-center text-center">
-                                <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" class="rounded-circle" width="150">
-                                <div class="mt-3">
-                                    <h4>{{accountinfo[0]}}</h4>
-                                    <p class="text-secondary mb-1">(OCCUPATION)</p>
+        <div class="container">
+            <div class="main-body">
+                <div class="row gutters-sm">
+                    <div class="col-md-4 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="d-flex flex-column align-items-center text-center">
+                                    <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}"
+                                        class="rounded-circle" width="150">
+                                    <div class="mt-3">
+                                        <h4>{{accountinfo[0]}}</h4>
+                                        <p class="text-secondary mb-1">(OCCUPATION)</p>
 
 
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                </div>
-                <div class="col-md-8">
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Name</h6>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Name</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        {{accountinfo[0]}}
+                                    </div>
                                 </div>
-                                <div class="col-sm-9 text-secondary">
-                                    {{accountinfo[0]}}
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Email</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        {{accountinfo[1]}}
+                                    </div>
                                 </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Email</h6>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Phone</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        {{accountinfo[2]}}
+                                    </div>
                                 </div>
-                                <div class="col-sm-9 text-secondary">
-                                    {{accountinfo[1]}}
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Address</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        {{accountinfo[3]}}
+                                    </div>
                                 </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Phone</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    {{accountinfo[2]}}
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Address</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    {{accountinfo[3]}}
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <a class="btn btn-info " target="__blank" href="{{ url_for('accountPageEdit')}}">Edit</a>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <a class="btn btn-info " target="__blank"
+                                            href="{{ url_for('accountPageEdit')}}">Edit</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
+
+
+
                     </div>
-
-
-
-
                 </div>
+
             </div>
-
         </div>
-    </div>
-    {% endblock %}
+        {% endblock %}
     </section>
-    
+
 </body>
 
 </html>
