--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="logo-box">
-                <img src="{{ url_for('static',filename='images/paratuslogoicon.png')}}" alt="">
+                <img src="{{ url_for('static',filename='images/paratuslogoicon.png')}}" alt="" class="center">
             </div>
 
             <div class="profile-details">
