--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -73,10 +73,10 @@
             </div>
 
             <div class="logo-box">
-                <img src="{{ url_for('static',filename='images/paratuslogoicon.png')}}" alt="">
+                <img src="{{ url_for('static',filename='images/paratuslogoicon.png')}}" alt="" class="center">
             </div>
 
-            <div class="profile-details">
+            <div class=" profile-details">
                 <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" alt="">
                 <span class="admin_name">{{username}}</span>
 
