Added news section and fixed css for accountpage

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -120,9 +120,30 @@
                 <div class="recent-info box">
                     <div class="title">Recent Information</div>
 
+                    <a><br> </br> No New Information </a>
+
 
                     <div class="button">
                         <a href="#">See All</a>
+                    </div>
+                </div>
+
+            </div>
+            <br></br>
+            <div class="info-boxes">
+                <div class="recent-info box">
+                    <div class="title">Recent News</div>
+                    <h3><br> </br> March 8, 2021 </h3>
+                    <a>
+
+                        Paratus Hires Chief Information Officer
+                        Brea, California, February 8th, 2021- Paratus Partners welcomes James Ni as the new Chief
+                        Information Officer. Jim is a graduate of the University of Illinois with a degree in Computer
+                        Science and Mathematics. With over... <br></br></a>
+
+
+                    <div class="button">
+                        <a href="#">Read More</a>
                     </div>
                 </div>
 
